# teaching

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  pyproject.toml
app/: README.md  capture_frames.py  imx8_setup.md
app/scenarios/: idb_interface.json
app/scenarios/10_demo/client/: docker-compose.yml
app/scenarios/10_demo/server/: docker-compose.yml
app/scenarios/11_demo_fs/client/: docker-compose.yml
app/scenarios/1_mock_data_stream/: .env  config.yml  docker-compose.yml  scenario.py
app/scenarios/2_rl_carla_mock/: docker-compose.yml
app/scenarios/3_video_stream/: docker-compose.yml
app/scenarios/4_shimmer_stream/: .env  config.yml  docker-compose.yml
app/scenarios/5_stress_mock_data/: config.yml  docker-compose.yml  scenario.py
app/scenarios/6_full_pipeline_mock_data/: docker-compose.yml
app/scenarios/7_full_pipeline_mock_carla/: docker-compose.yml
app/scenarios/8_federated_rl/: docker-compose.yml
app/scenarios/9_federated_rl_mock_data/: docker-compose.yml
app/scenarios/hackathon_scenario/: minimal_hackathon_scenario.yml
app/scenarios/review_scenario_1_local/: create_model.py  scenario.py
app/scenarios/review_scenario_2/: scenario.py
app/storage/data/: wesad.csv
app/storage/data/wesad/: process.ipynb  (+2 more)
app/storage/models/: RL_model_episode_470_77.6718928615904.h5
app/templates/ai_toolkit/: README.md
docker/teaching-ai_toolkit/: Dockerfile
docker/teaching-data/: Dockerfile
docker/teaching-interface/: Dockerfile
docker/teaching-sensors/: Dockerfile
requirements/: ai_toolkit-requirements.txt  base-requirements.txt  data-requirements.txt  sensors-requirements.txt
teaching/: __init__.py
teaching/ai_toolkit/: data.py  node.py
teaching/ai_toolkit/models/: esn.py  private_rnn.py
teaching/ai_toolkit/modules/: avionics_anomaly.py  driving_profile.py  object_recognition.py  stress_prediction.py
teaching/ai_toolkit/training/: __init__.py  local.py
teaching/app/: app.py  run.py
teaching/data/: node.py
teaching/data/modules/: influxdb.py
teaching/interface/: __init__.py  node.py
teaching/interface/communication/: __init__.py  packet.py
teaching/sensors/: node.py
(+56 files in other folders)
